@@ -1,3 +1,7 @@
+2008-04-02 John Wu <John.Wu at ACM.org>
+	* src/index.cpp:3358 need to resize bdry before assignments
+	* src/qExpr.cpp:1367 check expr->left and expr->right
+
 2008-04-01 John Wu <John.Wu at ACM.org>
 	* src/util.cpp: change userName to use getlogin_r as the primary
 	method
